# agentrail

./: .dockerignore  .env.example  .gitignore  .npmignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TASTE.md  docker-compose.yml  install.sh  node_modules  npm-README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agentrail/: config.json  qa.sh  verify.sh
.agentrail/hooks/: context-first.sh
.claude/: launch.json  settings.json
.claude/hooks/: postcompact_notify.py  precompact_summary.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  eval-canary.yml  publish.yml  release.yml
Formula/: agentrail.rb
agentrail/: __init__.py  github_app.py
agentrail/afk/: __init__.py  connectors_store.py  diff_savings.py  github.py  hosted_repo_guard.py  input_contract.py  journal.py  objective_gate.py  queue_state.py  queue_store.py  review.py  review_engine.py  review_push.py  run_register.py  runner.py  state.py  store.py  telemetry.py  timeline.py
agentrail/cli/: __init__.py  main.py
agentrail/connectors/: __init__.py  base.py  discord.py  gateway.py  github.py  linear.py  (+3 more)
deploy/: .env.production.example  Caddyfile  README.md  docker-compose.prod.yml  telegram-shared-bot-cutover.md
docs/: config.md  eval-apply-walkthrough.md  langfuse-local.md  m3-review-smoke.md  native-execute-smoke.md  native-run-smoke.md
evals/: README.md  __init__.py
milestones/: 001-context-compiler-contract.md  002-local-code-graph-index.md  003-graph-aware-retrieval-quality-gates.md  004-server-ingestion-spine.md  005-agent-operations-console-v1.md
scripts/: agentrail  agentrail-legacy  benchmark-agent-ab.py  benchmark-all.py  benchmark-latency.py  benchmark-vs-grep.py  install-workflow  test-afk-merge-reviewed-pr  test-cli-first-docs  test-codex-desktop-docs  test-context-benchmark  test-context-evaluation  test-context-index  test-context-packs  test-context-privacy  test-context-query  test-context-sources  test-doctor  test-install  test-install.sh  test-label-sync  test-mcp  test-promote-unblocked-issues  test-prompt-generation  test-public-positioning  test-resume-handoff  test-review-memory-suggestions  test-runner-adapter  test-skill-registry-validation  test-skill-resolution  test-source-afk-dogfood  test-upgrade
templates/: AGENTS.md  CONTEXT.md  TASTE.md
tests/: conftest.py
(+1715 files in other folders)
