[project]
name = "agentrail"
version = "0.1.0"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-language-pack>=0.9,<0.10",
]

[tool.setuptools.packages.find]
include = ["agentrail*"]

[tool.setuptools.package-data]
agentrail = ["templates/**", "skills/**"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
