[project]
name = "agentrail"
version = "0.1.0"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "tree-sitter>=0.23,<0.24",
    "tree-sitter-language-pack>=0.9,<0.10",
]

[tool.setuptools.packages.find]
include = ["agentrail*"]
exclude = ["agentrail.tests", "agentrail.tests.*"]

[tool.setuptools.package-data]
# context/openrouter-catalog.snapshot.json (#1337): the gateway price snapshot
# agentrail/run/pricing.py reads at runtime — MUST be installed into the wheel
# so it exists in the runner/fleet image's site-packages (the image installs
# the package with `pip install .`, non-editable, so a source-tree-only file
# would be absent there and every gateway-only model would silently price $0).
agentrail = ["templates/**", "skills/**", "context/openrouter-catalog.snapshot.json"]

[tool.pytest.ini_options]
testpaths = ["agentrail/tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
